Fix overflow of settings items & image lazyload

--- a/admin/styles.css
+++ b/admin/styles.css
@@ -7,6 +7,7 @@
     background-color: #fff;
     display: flex;
     flex-direction: row;
+    overflow: auto;
 }
 
 .SectionContainerHeader {
